--- a/HW2 German Credit.Rmd
+++ b/HW2 German Credit.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Individual Case 2"
+title: "Classification Models : German Credit Scoring Data"
 output:
   word_document: default
   html_document: default
